gcc/testsuite/gdc.test/compilable/imports/test16348.d
module mypackage.bar;

package bool bar()
{
    return false;
}
