gcc/testsuite/gdc.test/fail_compilation/imports/dip22c.d
module pkg.dip22c;

package(pkg) struct Foo {}
